assets/css/general.css
/* ... */
/* ============ desktop view .end// ============ */

/* ============ small devices ============ */
@media (max-width: 991px) {

	.header-dropdown {
		margin-left: 0.7rem;
		margin-right: 0.7rem;
		margin-bottom: 0.5rem;
	}

	.header-dropdown li {
		position: relative;
	}

	.nav-item .submenu {
		display: none;
		position: absolute;
		left: 30%;
		top: -7px;
	}

}
/* ============ small devices .end// ============ */

.dropdown-menu {
	z-index: 2000 !important;
	position: absolute !important;
}

[hidden] {
	display: none !important;
}

a {
	text-decoration: none !important;
}

.main-nav .container {
	margin-top: 0px !important;
}

#nav-container {
	margin-top: 0;
	position: sticky;
	top: 0;
}

thead > tr > td {
	position: sticky;
	top: 45px;
}

.headerLogo {
	width: 50px;
	height: 50px;
}

.mainLogo {
	width: 300px;
	height: 300px;
}

.navbar {
	--bs-navbar-padding-y: 0.25rem;
}

.dashboard {
	padding-top: none;
}

.row.logdata {
	padding-top: 15px;
}

.statistics {
	padding-top: 15px;
}

.statistics_custom {
	padding-top: 15px;
}

.notes {
	padding-top: 15px;
}

.eqsl {
	padding-top: 15px;
}

.publicsearch {
	padding-top: 15px;
	max-width: 540px;
}

.search {
	padding-top: 15px;
}

.logbook {
	padding-top: 15px;
}

.adif {
	padding-top: 15px;
}

.adif .alert p {
	margin-bottom: 0rem;
}

.api .alert p {
	margin-bottom: 0rem;
}

.qso_panel {
	padding-top: 25px;
}

.qso_panel #callsign {
	text-transform: uppercase;
}

.qso_panel #locator {
	text-transform: uppercase;
}

.qso_panel .iota_ref {
	text-transform: uppercase;
}

.qso_panel #sota_ref-selectized {
	text-transform: uppercase;
}

.qso_panel #wwff_ref-selectized {
	text-transform: uppercase;
}

.qso_panel #pota_ref-selectized {
	text-transform: uppercase;
}

.qso_panel #darc_dok-selectized {
	text-transform: uppercase;
}

.card-body #callsign {
	text-transform: uppercase;
}

.card-body #locator {
	text-transform: uppercase;
}

.card-body #vucc_grids {
	text-transform: uppercase;
}

.card-body #sota_ref_edit-selectized {
	text-transform: uppercase;
}

.card-body #wwff_ref_edit-selectized {
	text-transform: uppercase;
}

.card-body #pota_ref_edit-selectized {
	text-transform: uppercase;
}

.card-body #darc_dok_edit-selectized {
	text-transform: uppercase;
}

.card-body #exch_rcvd {
	text-transform: uppercase;
}

.card-body #exch_sent {
	text-transform: uppercase;
}

.card-body #exch_gridsquare_r {
	text-transform: uppercase;
}

#oqrssearch:valid {
	text-transform: uppercase;
}

.confirmedGrid {
	border-color: green;
}

.workedGrid {
	border-color: yellow;
}

.newGrid {
	border-color: red;
	border-width: 2px;
}

#country {
	border: none;
}

TD.eqsl {
	width: 35px;
}

.eqsl-green {
	color: #00a000 !important;
	font-size: 1.1em;
}

.eqsl-red {
	color: #f00 !important;
	font-size: 1.1em;
}

TD.qsl {
	width: 35px;
}

.qsl-green {
	color: #00a000 !important;
	font-size: 1.1em;
}

.qsl-red {
	color: #f00 !important;
	font-size: 1.1em;
}

.qsl-yellow {
	color: #d39e00 !important;
	font-size: 1.1em;
}

.qsl-grey {
	color: #dddddd !important;
	font-size: 1.1em;
}

TD.qrz {
	width: 35px;
}

.qrz-green {
	color: #00a000 !important;
	font-size: 1.1em;
}

.qrz-red {
	color: #f00 !important;
	font-size: 1.1em;
}

TD.lotw {
	width: 35px;
}

.lotw-green {
	color: #00a000 !important;
	font-size: 1.1em;
}

.lotw-red {
	color: #f00 !important;
	font-size: 1.1em;
}

.qso-edit-box {
	padding: 10px;
}

.previous-qsos .card-title {
	margin-bottom: 0px;
}

.qso-map .card-title {
	margin-bottom: 0px;
}

.qso-map {
	margin-bottom: 10px;
}

.callsign-suggest {
	margin-bottom: 10px;
}

.callsign-suggest .card-title {
	margin-bottom: 0px;
}

#search_box #callsign {
	text-transform: uppercase;
}

#nav-bar-search-input:focus {
	text-transform: uppercase;
}

.settings {
	padding-top: 15px;
}

.settings-nav {
	margin-bottom: 15px;
	list-style: none;
	background-color: #fff;
	border: 1px solid #d1d5da;
	border-radius: 3px;
}

.settings-nav .nav-link {
	list-style: none;
	background-color: #fff;
	border: 1px solid #d1d5da;
}

.settings-nav .nav-link:hover {
	background-color: #e1e4e8;
}

/* QSL Card Management CSS */

.qsl_management {
	padding-top: 15px;
}

/*
*
*
*/
.qso-map-new .card-header {
	background: #0f2027;
	/* fallback for old browsers */
	background: -webkit-linear-gradient(to right, #2c5364, #203a43, #0f2027);
	/* Chrome 10-25, Safari 5.1-6 */
	background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
	color: #ffffff;
}

#myTab .nav-link {
	padding: 8px !important;
}

#map {
	z-index: 1;
}

#qsomap {
	z-index: 1;
}

#create_station_profile .row {
	margin-bottom: 10px;
}

/*
*   Debug CSS
*/

.card {
	margin-bottom: 10px;
}

.modal-backdrop {
	z-index: 1000 !important;
}

.was-map-dialog .modal-dialog {
	width: 100%;
}

@media (min-width: 576px) {
	.was-map-dialog .modal-dialog {
		max-width: 73% !important;
	}
}

/*
 * Timepicker alignment
 */
.exportdatepicker {
	padding-right: 0;
	padding-left: 0;
}

.modal-body {
	max-height: calc(100vh - 200px);
	overflow-y: auto;
}

/* Station Logbooks Styles */

div#station_logbooks_table_length {
	padding-top: 12px;
	padding-left: 12px;
	padding-bottom: 0px;
}

div#station_logbooks_table_filter {
	padding-top: 12px;
	padding-right: 12px;
	padding-bottom: 0px;
}

div#station_logbooks_table_info {
	padding-left: 12px;
}

div#station_logbooks_table_paginate {
	padding-right: 12px;
	padding-bottom: 12px;
}

div#station_logbooks_linked_table_length {
	padding-top: 12px;
	padding-left: 12px;
	padding-bottom: 0px;
}

div#station_logbooks_linked_table_filter {
	padding-top: 12px;
	padding-left: 12px;
	padding-bottom: 0px;
}

div#station_logbooks_linked_table_info {
	padding-left: 12px;
}

div#station_logbooks_linked_table_paginate {
	padding-right: 12px;
	padding-bottom: 12px;
}

/* qrz.com profile picture Styles */

.card-title {
	margin-bottom: 0px;
}

.callsign-image {
	margin-bottom: 10px;
}
/* ... */

